versions/v2.9/modules/en/pages/integrations/cluster-api/cluster-api.adoc
= {turtles-product-name}
:page-languages: [en, zh]
:revdate: 2025-06-20
:page-revdate: {revdate}
:community-path: integrations-in-rancher/cluster-api/index.adoc 
:product-path: integrations/cluster-api/cluster-api.adoc
ifeval::["{build-type}" != "community"]
:url-cluster-api-index: https://documentation.suse.com/cloudnative/cluster-api/{turtles-docs-version}/en/index.html
:url-cluster-api-operator-values: https://documentation.suse.com/cloudnative/cluster-api/{turtles-docs-version}/en/operator/chart.html#_cluster_api_operator_values
:xref-turtles-overview: xref:integrations/cluster-api/overview.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:url-cluster-api-index: https://turtles.docs.rancher.com/turtles/{turtles-docs-version}/en/index.html
:url-cluster-api-operator-values: https://turtles.docs.rancher.com/turtles/{turtles-docs-version}/en/operator/chart.html#_cluster_api_operator_values
:xref-turtles-overview: xref:integrations-in-rancher/cluster-api/overview.adoc
endif::[]

{url-cluster-api-index}[{turtles-product-name}] is a https://kubernetes.io/docs/concepts/extend-kubernetes/operator/#operators-in-kubernetes[Kubernetes Operator] that manages the lifecycle of provisioned Kubernetes clusters, by providing integration between your Cluster API (CAPI) and Rancher. With Rancher Turtles, you can:

* Import CAPI clusters into Rancher, by installing the Rancher Cluster Agent in CAPI provisioned clusters.
* Configure the {url-cluster-api-operator-values}[CAPI Operator].

The {xref-turtles-overview}[Overview] section outlines installation options, Rancher Turtles architecture, and a brief demo. For more details, see the {url-cluster-api-index}[{turtles-product-name} documentation].
