versions/v2.14/modules/en/pages/integrations/cluster-api/cluster-api.adoc
= {turtles-product-name}
ifeval::["{build-type}" != "srfa"]
:page-languages: [en, de, es, fr, ja, pt, zh]
endif::[]
:revdate: 2026-04-24
:page-revdate: {revdate}
:community-path: integrations-in-rancher/cluster-api/index.adoc 
:product-path: integrations/cluster-api/cluster-api.adoc
ifeval::["{build-type}" != "community"]
:url-cluster-api-index: https://documentation.suse.com/cloudnative/cluster-api/{turtles-docs-version}/en/index.html
:url-cluster-api-capiprovider: https://documentation.suse.com/cloudnative/cluster-api/{turtles-docs-version}/en/reference/capiprovider.html
:xref-turtles-overview: xref:integrations/cluster-api/overview.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:url-cluster-api-index: https://turtles.docs.rancher.com/turtles/{turtles-docs-version}/en/index.html
:url-cluster-api-capiprovider: https://turtles.docs.rancher.com/turtles/{turtles-docs-version}/en/reference/capiprovider.html
:xref-turtles-overview: xref:integrations-in-rancher/cluster-api/overview.adoc
endif::[]

{url-cluster-api-index}[{turtles-product-name}] is a https://kubernetes.io/docs/concepts/extend-kubernetes/operator/#operators-in-kubernetes[Kubernetes Operator] that manages the lifecycle of provisioned Kubernetes clusters, by providing integration between your Cluster API (CAPI) and Rancher. With Rancher Turtles, you can:

* Import CAPI clusters into Rancher, by installing the Rancher Cluster Agent in CAPI provisioned clusters.
* Manage the https://cluster-api-operator.sigs.k8s.io/[CAPI Operator] using the {url-cluster-api-capiprovider}[CAPIProvider] resource.

The {xref-turtles-overview}[Overview] section outlines installation options, Rancher Turtles architecture, and a brief demo. For more details, see the {url-cluster-api-index}[{turtles-product-name} documentation].
